fixed burger menu overflow

--- a/src/components/Navigation/Burger.module.css
+++ b/src/components/Navigation/Burger.module.css
@@ -49,10 +49,10 @@
   position: absolute;
   display: flex;
   align-items: center;
-  justify-content: center;
-  right: 25px;
-  top: 7px;
-  width: 50px;
+  right: -242px;
+  padding: 5px;
+  top: 0;
+  width: 300px;
   height: 44px;
   z-index: 100;
   -webkit-transition: transform 0.3s ease-out;
@@ -78,6 +78,8 @@
 
 .menu-icon span {
   display: block;
+  position: relative;
+  top: 2px;
   width: 100%;
   height: 5px;
   background-color: #333;
